invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_68.src
.IPPcode24
NOT int@49 int@49 int@49